<resources>

    <string name="app_name">CSE461AndroidApps</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_android_start">CSE461 Apps</string>
    <string name="configok">OK</string>
    <string name="title_activity_android_app_manager">AndroidAppManager</string>
    <string name="title_activity_echoraw">EchoRaw</string>
    <string name="title_activity_pingrpc">PingRPC</string>
    <string name="title_activity_snet">SNet</string>
    <string name="title_activity_version">Version</string>
    <string name="androidappmanagerPrompt">Select a CSE461 application to run</string>
    <string name="ok">OK</string>
    <string name="snet_takepicture">Take Picture</string>
    <string name="snet_choosepicture">Choose Picture</string>
    <string name="snet_updatepictures">Update Pictures</string>
    <string name="snet_contact">Contact</string>
    <string name="snet_friend">Befriend</string>
    <string name="snet_unfriend">Unfriend</string>
    <string name="snet_fixdb">Fix DB</string>
    <string name="echo">Echo</string>
    <string name="title_activity_pingTCPMsgHndlr">PingTCPMessageHandler</string>
    <string name="ping">Ping</string>
    <string name="hostIP">Host IP</string>
    <string name="hostPort">Host Port</string>
    <string name="hostAddress">Host Address</string>
    
</resources>