<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/myiptext"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/gobutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myiptext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="161dp"
        android:onClick="onTakePhoto"
        android:text="@string/snet_takepicture" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gobutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="onChoosePicture"
        android:text="@string/snet_choosepicture" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:onClick="onExchange"
        android:text="@string/snet_updatepictures" />

    <ImageView
        android:id="@+id/mypicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/myiptext"
        android:layout_marginTop="51dp"
        android:layout_toLeftOf="@+id/button2"
        android:src="@drawable/ic_launcher" />

    <ImageView
        android:id="@+id/chosenpicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/mypicture"
        android:layout_toRightOf="@+id/button2"
        android:src="@drawable/ic_launcher" />

</RelativeLayout>