<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/pingtcpmessagehandler_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="5dp" >

        <TextView
            android:id="@+id/pingtcpmessagehandler_myiptext"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="myip text"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/pingtcpmessagehandler_iptext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/pingtcpmessagehandler_myiptext"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="Address"
            android:inputType="text" />

        <requestFocus />

        <TextView
            android:id="@+id/pingtcpmessagehandler_outputtext"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/pingtcpmessagehandler_porttext"
            android:layout_marginBottom="73dp"
            android:ems="10"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/pingtcpmessagehandler_porttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/pingtcpmessagehandler_iptext"
            android:layout_below="@+id/pingtcpmessagehandler_iptext"
            android:ems="10"
            android:hint="Port number"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/pingtcpmessagehandler_iptext"
            android:layout_alignBottom="@+id/pingtcpmessagehandler_iptext"
            android:layout_alignParentLeft="true"
            android:text="@string/hostAddress"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/pingtcpmessagehandler_porttext"
            android:layout_alignBottom="@+id/pingtcpmessagehandler_porttext"
            android:layout_alignLeft="@+id/textView1"
            android:text="@string/hostPort"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/pingtcpmessagehandler_gobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/pingtcpmessagehandler_porttext"
            android:layout_marginTop="20dp"
            android:layout_toLeftOf="@+id/pingtcpmessagehandler_porttext"
            android:onClick="onGoClicked"
            android:text="@string/ping" />

    </RelativeLayout>

</LinearLayout>